[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
env_logger = "0.10.0"
ctrlc = "3.4.1"
bytes = "1.0.1"
speedy = "0.8.6"
toml = "0.8.1"
serde = { version = "1.0.188", features = ["derive"]}